[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/SpurffWorld/normal_insect.png" type="Texture" id=1]
[ext_resource path="res://Sprites/SpurffWorld/spurff_village.png" type="Texture" id=2]
[ext_resource path="res://Sprites/SpurffWorld/village_right_door.png" type="Texture" id=3]
[ext_resource path="res://Sprites/SpurffWorld/village_left_door.png" type="Texture" id=4]
[ext_resource path="res://Insect UI.tscn" type="PackedScene" id=5]
[ext_resource path="res://InsectClicked.gd" type="Script" id=6]

[node name="InsectScene" type="Node2D"]

[node name="spurff_village" type="Sprite" parent="."]
position = Vector2( 519.241, 295.237 )
scale = Vector2( 0.544606, 0.558845 )
texture = ExtResource( 2 )

[node name="Insect UI" parent="." instance=ExtResource( 5 )]

[node name="Insect" type="Area2D" parent="."]
position = Vector2( 148.492, 77.7818 )
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="Insect"]
position = Vector2( 828.203, 464.818 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Insect"]
position = Vector2( -0.00012207, -1.69385 )
scale = Vector2( 1, 1.00413 )
polygon = PoolVector2Array( 821.015, 480.925, 821.487, 478.72, 823.22, 476.515, 825.897, 476.043, 833.142, 472.578, 840.386, 468.011, 842.119, 467.223, 848.733, 458.089, 854.56, 449.27, 854.245, 445.805, 854.245, 442.025, 852.985, 439.19, 851.096, 438.875, 841.016, 446.435, 836.921, 446.277, 833.929, 446.592, 831.724, 447.222, 829.992, 448.482, 828.102, 449.427, 830.149, 445.962, 832.669, 442.183, 835.977, 436.985, 836.449, 435.253, 835.032, 434.151, 832.354, 435.095, 827.315, 438.088, 817.865, 445.962, 815.503, 449.585, 813.14, 456.672, 812.195, 463.601, 812.195, 466.121, 808.258, 468.483, 804.951, 471.003, 798.966, 476.988, 797.706, 477.618, 797.076, 478.72, 793.454, 480.138, 790.619, 482.815, 790.462, 484.705, 790.462, 487.697, 786.525, 491.949, 786.682, 494.154, 788.099, 494.784, 789.202, 494.469, 788.887, 493.524, 789.359, 492.422, 792.509, 490.217, 795.344, 491.477, 793.454, 493.367, 792.509, 494.312, 790.777, 494.627, 790.462, 496.202, 791.564, 497.147, 793.769, 496.202, 796.289, 494.784, 798.651, 493.209, 801.171, 492.894, 799.124, 496.674, 797.391, 499.351, 797.864, 500.454, 799.754, 499.981, 800.384, 498.249, 801.801, 497.304, 802.904, 495.414, 804.321, 493.997, 807.313, 490.217, 808.258, 485.807, 809.833, 485.335, 809.833, 488.485, 808.731, 492.264, 807.313, 494.784, 806.683, 499.036, 807.471, 499.981, 808.573, 499.351, 809.676, 495.729, 811.251, 491.949, 811.881, 490.847, 812.51, 489.43, 811.408, 485.807, 813.14, 487.225, 814.715, 490.06, 815.66, 491.634, 816.605, 495.257, 816.92, 498.407, 818.023, 498.879, 818.338, 499.824, 817.708, 504.549, 814.558, 513.526, 815.503, 514.313, 816.92, 513.368, 818.495, 509.903, 820.385, 505.336, 821.33, 500.769, 820.857, 497.619, 821.33, 495.729, 819.598, 491.004, 818.653, 491.162, 818.968, 489.43, 815.66, 485.177, 818.968, 486.437, 820.857, 487.697, 821.33, 490.847, 823.692, 492.579, 831.882, 509.746, 833.457, 510.061, 833.457, 508.486, 831.567, 504.706, 830.779, 501.084, 827.63, 493.524, 823.692, 486.91, 818.81, 483.287, 822.275, 483.76, 826.527, 488.012, 829.519, 490.06, 830.149, 492.579, 834.717, 503.604, 836.764, 504.706, 836.292, 502.344, 834.874, 499.666, 834.874, 498.092, 832.984, 492.737, 831.882, 489.43, 829.519, 485.492, 824.795, 483.13, 823.22, 481.398 )

[node name="Insect5" type="Area2D" parent="."]
position = Vector2( -476.078, -82.2991 )
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="Insect5"]
position = Vector2( 782.374, 489.701 )
scale = Vector2( 0.0522608, 0.0539195 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Insect5"]
position = Vector2( 365.254, 245.498 )
scale = Vector2( 0.502993, 0.525928 )
polygon = PoolVector2Array( 821.015, 480.925, 821.487, 478.72, 823.22, 476.515, 825.897, 476.043, 833.142, 472.578, 840.386, 468.011, 842.119, 467.223, 848.733, 458.089, 854.56, 449.27, 854.245, 445.805, 854.245, 442.025, 852.985, 439.19, 851.096, 438.875, 841.016, 446.435, 836.921, 446.277, 833.929, 446.592, 831.724, 447.222, 829.992, 448.482, 828.102, 449.427, 830.149, 445.962, 832.669, 442.183, 835.977, 436.985, 836.449, 435.253, 835.032, 434.151, 832.354, 435.095, 827.315, 438.088, 817.865, 445.962, 815.503, 449.585, 813.14, 456.672, 812.195, 463.601, 812.195, 466.121, 808.258, 468.483, 804.951, 471.003, 798.966, 476.988, 797.706, 477.618, 797.076, 478.72, 793.454, 480.138, 790.619, 482.815, 790.462, 484.705, 790.462, 487.697, 786.525, 491.949, 786.682, 494.154, 788.099, 494.784, 789.202, 494.469, 788.887, 493.524, 789.359, 492.422, 792.509, 490.217, 795.344, 491.477, 793.454, 493.367, 792.509, 494.312, 790.777, 494.627, 790.462, 496.202, 791.564, 497.147, 793.769, 496.202, 796.289, 494.784, 798.651, 493.209, 801.171, 492.894, 799.124, 496.674, 797.391, 499.351, 797.864, 500.454, 799.754, 499.981, 800.384, 498.249, 801.801, 497.304, 802.904, 495.414, 804.321, 493.997, 807.313, 490.217, 808.258, 485.807, 809.833, 485.335, 809.833, 488.485, 808.731, 492.264, 807.313, 494.784, 806.683, 499.036, 807.471, 499.981, 808.573, 499.351, 809.676, 495.729, 811.251, 491.949, 811.881, 490.847, 812.51, 489.43, 811.408, 485.807, 813.14, 487.225, 814.715, 490.06, 815.66, 491.634, 816.605, 495.257, 816.92, 498.407, 818.023, 498.879, 818.338, 499.824, 817.708, 504.549, 814.558, 513.526, 815.503, 514.313, 816.92, 513.368, 818.495, 509.903, 820.385, 505.336, 821.33, 500.769, 820.857, 497.619, 821.33, 495.729, 819.598, 491.004, 818.653, 491.162, 818.968, 489.43, 815.66, 485.177, 818.968, 486.437, 820.857, 487.697, 821.33, 490.847, 823.692, 492.579, 831.882, 509.746, 833.457, 510.061, 833.457, 508.486, 831.567, 504.706, 830.779, 501.084, 827.63, 493.524, 823.692, 486.91, 818.81, 483.287, 822.275, 483.76, 826.527, 488.012, 829.519, 490.06, 830.149, 492.579, 834.717, 503.604, 836.764, 504.706, 836.292, 502.344, 834.874, 499.666, 834.874, 498.092, 832.984, 492.737, 831.882, 489.43, 829.519, 485.492, 824.795, 483.13, 823.22, 481.398 )

[node name="Insect2" type="Area2D" parent="."]
position = Vector2( 43.693, -54.8709 )
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="Insect2"]
position = Vector2( 843.771, 495.443 )
scale = Vector2( 0.0581997, 0.0484236 )
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Insect2"]
position = Vector2( 17.9516, 0.823609 )
scale = Vector2( 0.971682, 0.997352 )
polygon = PoolVector2Array( 857.352, 506.274, 855.698, 507.691, 855.068, 508.715, 853.966, 511.786, 854.044, 514.463, 855.541, 517.849, 856.879, 519.975, 857.824, 520.29, 858.533, 519.818, 857.745, 519.188, 857.037, 517.692, 856.013, 514.306, 855.462, 513.518, 856.17, 512.731, 856.8, 512.81, 857.037, 510.526, 858.139, 508.085, 859.793, 506.825, 859.399, 508.636, 860.029, 508.951, 861.053, 510.841, 862.234, 513.282, 863.415, 513.203, 863.73, 512.495, 863.1, 510.605, 862.549, 509.266, 861.368, 508.321, 861.683, 507.612, 862.549, 508.4, 864.517, 509.896, 868.376, 513.597, 869.478, 513.361, 869.4, 512.416, 866.486, 509.817, 868.219, 509.896, 871.132, 511.471, 873.101, 511.943, 873.573, 511.471, 873.573, 510.526, 872.234, 510.369, 871.526, 509.739, 870.581, 509.109, 871.841, 508.636, 873.022, 508.794, 874.439, 509.817, 874.833, 510.762, 875.857, 510.526, 876.408, 509.817, 875.857, 508.794, 874.754, 507.927, 873.573, 507.297, 873.809, 505.723, 871.683, 503.518, 869.951, 502.73, 865.699, 500.132, 862.076, 497.454, 859.872, 496.667, 858.612, 490.446, 856.328, 487.06, 851.21, 483.359, 846.091, 480.918, 843.818, 481.619, 845.117, 483.076, 849.173, 488.076, 845.708, 486.973, 843.818, 486.816, 841.456, 487.013, 834.369, 483.351, 833.384, 483.548, 832.873, 484.493, 832.479, 486.422, 832.873, 488.194, 834.881, 490.95, 836.613, 492.407, 837.164, 493.43, 839.566, 495.045, 843.7, 498.037, 847.994, 500.183, 852.199, 501.375, 853.291, 502.269, 854.45, 503.924, 852.563, 504.321, 851.404, 505.149, 848.689, 506.341, 847.034, 508.427, 845.213, 512.764, 843.657, 515.843, 845.18, 515.148, 847.001, 512.665, 848.325, 510.082, 848.524, 508.725, 851.537, 506.771, 852.795, 505.911, 853.258, 505.248, 854.649, 504.917, 855.145, 505.017, 852.497, 506.672, 851.371, 507.864, 850.378, 509.85, 847.994, 513.525, 847.63, 514.982, 846.008, 517.829, 847.233, 517.763, 847.895, 516.936, 848.59, 515.777, 849.649, 513.89, 851.437, 510.811, 851.934, 510.215, 852.596, 509.519, 853.358, 509.056, 853.523, 508.559, 854.384, 507.665, 854.914, 507.301, 854.98, 506.705, 855.41, 506.507 )

[node name="Insect3" type="Area2D" parent="."]
position = Vector2( -547.883, -395.686 )
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="Insect3"]
position = Vector2( 826.952, 488.159 )
scale = Vector2( 0.0406799, 0.034935 )
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Insect3"]
position = Vector2( 241.696, 112.777 )
scale = Vector2( 0.689, 0.756456 )
polygon = PoolVector2Array( 857.352, 506.274, 855.698, 507.691, 855.068, 508.715, 853.966, 511.786, 854.044, 514.463, 855.541, 517.849, 856.879, 519.975, 857.824, 520.29, 858.533, 519.818, 857.745, 519.188, 857.037, 517.692, 856.013, 514.306, 855.462, 513.518, 856.17, 512.731, 856.8, 512.81, 857.037, 510.526, 858.139, 508.085, 859.793, 506.825, 859.399, 508.636, 860.029, 508.951, 861.053, 510.841, 862.234, 513.282, 863.415, 513.203, 863.73, 512.495, 863.1, 510.605, 862.549, 509.266, 861.368, 508.321, 861.683, 507.612, 862.549, 508.4, 864.517, 509.896, 868.376, 513.597, 869.478, 513.361, 869.4, 512.416, 866.486, 509.817, 868.219, 509.896, 871.132, 511.471, 873.101, 511.943, 873.573, 511.471, 873.573, 510.526, 872.234, 510.369, 871.526, 509.739, 870.581, 509.109, 871.841, 508.636, 873.022, 508.794, 874.439, 509.817, 874.833, 510.762, 875.857, 510.526, 876.408, 509.817, 875.857, 508.794, 874.754, 507.927, 873.573, 507.297, 873.809, 505.723, 871.683, 503.518, 869.951, 502.73, 865.699, 500.132, 862.076, 497.454, 859.872, 496.667, 858.612, 490.446, 856.328, 487.06, 851.21, 483.359, 846.091, 480.918, 843.818, 481.619, 845.117, 483.076, 849.173, 488.076, 845.708, 486.973, 843.818, 486.816, 841.456, 487.013, 834.369, 483.351, 833.384, 483.548, 832.873, 484.493, 832.479, 486.422, 832.873, 488.194, 834.881, 490.95, 836.613, 492.407, 837.164, 493.43, 839.566, 495.045, 843.7, 498.037, 847.994, 500.183, 852.199, 501.375, 853.291, 502.269, 854.45, 503.924, 852.563, 504.321, 851.404, 505.149, 848.689, 506.341, 847.034, 508.427, 845.213, 512.764, 843.657, 515.843, 845.18, 515.148, 847.001, 512.665, 848.325, 510.082, 848.524, 508.725, 851.537, 506.771, 852.795, 505.911, 853.258, 505.248, 854.649, 504.917, 855.145, 505.017, 852.497, 506.672, 851.371, 507.864, 850.378, 509.85, 847.994, 513.525, 847.63, 514.982, 846.008, 517.829, 847.233, 517.763, 847.895, 516.936, 848.59, 515.777, 849.649, 513.89, 851.437, 510.811, 851.934, 510.215, 852.596, 509.519, 853.358, 509.056, 853.523, 508.559, 854.384, 507.665, 854.914, 507.301, 854.98, 506.705, 855.41, 506.507 )

[node name="Insect4" type="Area2D" parent="."]
position = Vector2( -273.583, -153.551 )
script = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="Insect4"]
position = Vector2( 835.59, 496.726 )
scale = Vector2( 0.0266437, 0.0236595 )
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Insect4"]
position = Vector2( 459.659, 253.067 )
scale = Vector2( 0.442333, 0.491042 )
polygon = PoolVector2Array( 857.352, 506.274, 855.698, 507.691, 855.068, 508.715, 853.966, 511.786, 854.044, 514.463, 855.541, 517.849, 856.879, 519.975, 857.824, 520.29, 858.533, 519.818, 857.745, 519.188, 857.037, 517.692, 856.013, 514.306, 855.462, 513.518, 856.17, 512.731, 856.8, 512.81, 857.037, 510.526, 858.139, 508.085, 859.793, 506.825, 859.399, 508.636, 860.029, 508.951, 861.053, 510.841, 862.234, 513.282, 863.415, 513.203, 863.73, 512.495, 863.1, 510.605, 862.549, 509.266, 861.368, 508.321, 861.683, 507.612, 862.549, 508.4, 864.517, 509.896, 868.376, 513.597, 869.478, 513.361, 869.4, 512.416, 866.486, 509.817, 868.219, 509.896, 871.132, 511.471, 873.101, 511.943, 873.573, 511.471, 873.573, 510.526, 872.234, 510.369, 871.526, 509.739, 870.581, 509.109, 871.841, 508.636, 873.022, 508.794, 874.439, 509.817, 874.833, 510.762, 875.857, 510.526, 876.408, 509.817, 875.857, 508.794, 874.754, 507.927, 873.573, 507.297, 873.809, 505.723, 871.683, 503.518, 869.951, 502.73, 865.699, 500.132, 862.076, 497.454, 859.872, 496.667, 858.612, 490.446, 856.328, 487.06, 851.21, 483.359, 846.091, 480.918, 843.818, 481.619, 845.117, 483.076, 849.173, 488.076, 845.708, 486.973, 843.818, 486.816, 841.456, 487.013, 834.369, 483.351, 833.384, 483.548, 832.873, 484.493, 832.479, 486.422, 832.873, 488.194, 834.881, 490.95, 836.613, 492.407, 837.164, 493.43, 839.566, 495.045, 843.7, 498.037, 847.994, 500.183, 852.199, 501.375, 853.291, 502.269, 854.45, 503.924, 852.563, 504.321, 851.404, 505.149, 848.689, 506.341, 847.034, 508.427, 845.213, 512.764, 843.657, 515.843, 845.18, 515.148, 847.001, 512.665, 848.325, 510.082, 848.524, 508.725, 851.537, 506.771, 852.795, 505.911, 853.258, 505.248, 854.649, 504.917, 855.145, 505.017, 852.497, 506.672, 851.371, 507.864, 850.378, 509.85, 847.994, 513.525, 847.63, 514.982, 846.008, 517.829, 847.233, 517.763, 847.895, 516.936, 848.59, 515.777, 849.649, 513.89, 851.437, 510.811, 851.934, 510.215, 852.596, 509.519, 853.358, 509.056, 853.523, 508.559, 854.384, 507.665, 854.914, 507.301, 854.98, 506.705, 855.41, 506.507 )

[node name="village_right_door" type="Sprite" parent="."]
position = Vector2( 557.186, 302.183 )
scale = Vector2( 0.467, 0.537 )
texture = ExtResource( 3 )

[node name="village_left_door" type="Sprite" parent="."]
position = Vector2( 459.342, 298.639 )
scale = Vector2( 0.34098, 0.550119 )
texture = ExtResource( 4 )
[connection signal="input_event" from="Insect" to="Insect" method="_on_Insect_input_event"]
[connection signal="mouse_entered" from="Insect" to="Insect" method="_on_Insect_mouse_entered"]
[connection signal="mouse_exited" from="Insect" to="Insect" method="_on_Insect_mouse_exited"]
[connection signal="input_event" from="Insect5" to="Insect5" method="_on_Insect_input_event"]
[connection signal="mouse_entered" from="Insect5" to="Insect5" method="_on_Insect_mouse_entered"]
[connection signal="mouse_exited" from="Insect5" to="Insect5" method="_on_Insect_mouse_exited"]
[connection signal="input_event" from="Insect2" to="Insect2" method="_on_Insect_input_event"]
[connection signal="mouse_entered" from="Insect2" to="Insect2" method="_on_Insect_mouse_entered"]
[connection signal="mouse_exited" from="Insect2" to="Insect2" method="_on_Insect_mouse_exited"]
[connection signal="input_event" from="Insect3" to="Insect3" method="_on_Insect_input_event"]
[connection signal="mouse_entered" from="Insect3" to="Insect3" method="_on_Insect_mouse_entered"]
[connection signal="mouse_exited" from="Insect3" to="Insect3" method="_on_Insect_mouse_exited"]
[connection signal="input_event" from="Insect4" to="Insect4" method="_on_Insect_input_event"]
[connection signal="mouse_entered" from="Insect4" to="Insect4" method="_on_Insect_mouse_entered"]
[connection signal="mouse_exited" from="Insect4" to="Insect4" method="_on_Insect_mouse_exited"]
